gccida/c1/update_table_tick
/data/output_dir/patch/gcc/ida/clang/O1/gcc-clang-O1/update_table_tick/src/combine.c:11603:25: error: use of undeclared identifier 'mode_class_0'; did you mean 'mode_class'?
v3 = ( ( unsigned int)( mode_class_0[( unsigned __int8)v4] - 5) < 2) + 1; 
                        ^~~~~~~~~~~~
                        mode_class
/data/output_dir/patch/gcc/ida/clang/O1/gcc-clang-O1/update_table_tick/src/machmode.h:52:30: note: 'mode_class' declared here
extern const enum mode_class mode_class[NUM_MACHINE_MODES];
                             ^
1 error generated.
make: *** [/data/output_dir/patch/gcc/ida/clang/O1/gcc-clang-O1/update_table_tick/src/obj/combine.o] Error 1
